--- a/css/about.css
+++ b/css/about.css
@@ -16,8 +16,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: peru;
-} 
+}
+
+.about__photo img{
+    width: 100%;
+}
 
 .about__title{
     margin-top: -20px;
